# ha-pixelblaze

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hacs.json  info.md  pyproject.toml
.github/workflows/: hacs.yml  hassfest.yml  security.yml  validate.yml
custom_components/pixelblaze/: __init__.py  api.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  discovery.py  entity.py  icons.json  light.py  manifest.json  number.py  quality_scale.yaml  select.py  sensor.py  services.yaml  strings.json  switch.py  update.py
custom_components/pixelblaze/services/: __init__.py  registration.py
custom_components/pixelblaze/translations/: en.json
docs/: automations.md  configuration.md  dashboard.md  features.md  limitations.md  manual-install.md  troubleshooting.md
scripts/: check_requirements_sync.py  sync_manifest_requirements.py
tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_discovery_beacon.py  test_executor_safety.py  test_new_features.py  test_post_review_regressions.py  test_regressions.py  test_services.py  test_setup_and_entities.py
